####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.2b4
#########

:Codename: Monkey Magic
:2.2b4: NOT RELEASED YET

Compatibility Breaks
********************

New Features
************

Bug Fixes
*********

* Final fix for 'no help for command' issue. We now show a clean message
  when a command has no help, document how to set help more clearly, and
  test that all commands available to the test suite have help.
  (Robert Collins, #177500)

Improvements
************

Documentation
*************

* Improved our release checklist to have a bit less churn and leave things
  ready-to-go for the next action (including other people doing
  development). (Robert Collins)

API Changes
***********

Internals
*********

Testing
*******


bzr 2.2b3
#########

:2.2b3: 2010-05-28

This third beta in the 2.2 series brings with it all the goodness of 2.1.2
and 2.0.6 (though it preceeds 2.0.6 slightly). Of particular note for
users are compatibility fixes with bzr 1.5 and below servers, a hopeful
end to the EINTR errors caused by SIGWINCH interactions, a shiny new
bash completion script and bzr will no longer guess at identity details -
it was too unreliable in reality. Use ``bzr whoami`` on every new install.
For developers we have some API changes which may impact plugins as well
as a bunch of our regular improvements to internal clarity and test
support.

Compatibility Breaks
********************

* An API break has been made to the lock_write method of ``Branch`` and
  ``Repository`` objects; they now return ``branch.BranchWriteLockResult``
  and ``repository.RepositoryWriteLockResult`` objects. This makes
  changing the API in future easier and permits some cleaner calling code.
  The lock_read method has also changed from having no defined return
  value to returning ``LogicalLockResult`` objects.
  (Robert Collins)

* ``bzr`` does not try to guess the username as ``username@hostname``